[gd_scene load_steps=8 format=3 uid="uid://cevtfvqelc5cf"]

[ext_resource type="FontFile" uid="uid://ccnln6n4c0g54" path="res://Assets/Fonts/upheavtt.ttf" id="1_06t4h"]
[ext_resource type="Script" uid="uid://c8y4c1k21nlhl" path="res://Scripts/main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0, 0, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0, 0, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="StartMenu" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -140.1875
offset_right = 164.0
offset_bottom = 140.1875
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="GameTitle" type="Label" parent="Panel/StartMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 50
text = "Pacman Game
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Panel/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxFlat_fu7sn")
text = "Play"

[node name="Options" type="Button" parent="Panel/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxFlat_fu7sn")
text = "Options"

[node name="Exit" type="Button" parent="Panel/StartMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxFlat_fu7sn")
text = "Exit"

[node name="OptionMenu" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -142.0
offset_right = 200.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="SettingsLabel" type="Label" parent="Panel/OptionMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 50
text = "Sound Settings
"

[node name="MuteButton" type="Button" parent="Panel/OptionMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_glbon")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxFlat_06t4h")
text = "Mute"

[node name="BackButton" type="Button" parent="Panel/OptionMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_glbon")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxFlat_06t4h")
text = "Back
"

[connection signal="pressed" from="Panel/StartMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/StartMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/StartMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/OptionMenu/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="Panel/OptionMenu/BackButton" to="." method="_on_back_button_pressed"]
